  string empty now leads to printout values being returned as plain, unformatted
  values. Recall that the general format for printouts in #ask is as follows:
   ?propertyname # format = label
* New configuration parameter $smwgMaxNonExpNumber to set the maximal number that
  SMW will normally display without using scientific exp notation. Defaults to
  1000000000000000.
* The #ask parameter "headers" can now be given the value "plain" to get query
  results that show the printout label (e.g. property name) but without a link.
* Numerous bugfixes

== SMW 1.4.2 ==

See http://semantic-mediawiki.org/wiki/SMW_1.4.2

* Improved performance. Significantly improved memory usage on common
  operations.
* Initial support for running SMW on PostgreSQL (testing needed).
* The query formats 'vcard' and 'icalendar' have been moved to the Semantic
  Result Formats extension to make the SMW core more light-weight
* SMW_refreshData.php now supports parameter --page to specify one or more
  pages to be updated (instead of using ID ranges)
* Various bugfixes
* Extended translations

== SMW 1.4.1 ==

See http://semantic-mediawiki.org/wiki/SMW_1.4.1

* Improved parsing support for Type:Date, fixing some open issues
* Various bugfixes
* Extended translations

== SMW 1.4.0 ==

See http://semantic-mediawiki.org/wiki/SMW_1.4.0

* Easier installation, upgrade, repair:
  Special:SMWAdmin now has a control for refreshing the wiki data online.
* Better Type:Date
  ** much larger range of dates, covering all of human history
  ** internationalisation, support for localised date formats in input
  ** support for single year numbers in dates
  ** incomplete dates handled properly
* Query for page modification date using Property:Modification_date
* Full integration of "special properties" such as Property:Has_type
  ** can be queried in #ask, and printed in printouts
  ** usable in all browsing interfaces
  ** display uses of properties on property page
* Improved parsing process